# bankdoc-ai-pipeline

./: .gitignore  Dockerfile  IMPLEMENTATION.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.dvc/: config
data/: dvc.yaml  preprocessing.py
data/raw/: credit_memos.jsonl.dvc  kyc_forms.jsonl.dvc  loan_docs.jsonl.dvc
data/synthetic/: generate_credit_memos.py  generate_kyc_forms.py  generate_loan_docs.py
notebooks/: 01_data_exploration.ipynb
src/data/: loader.py
